# net_ninja_stack

./: README.md
src/: .env.example  .gitignore  .secret.key  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  app.db  delete_database.py  main.py  pyproject.toml  run.bat
src/app/: mail.py
src/app/quota_checker/: orange.py  we.py
src/backend/: .gitignore  README.md  delete_database.py  env.example  main.py  pyproject.toml
src/backend/api/: .gitignore
src/backend/api/routers/config/: emails_router.py  lines_router.py  logs_router.py
src/backend/api/routers/task_management/: jobs_router.py  schedules_router.py  task_results_router.py  task_statuses_router.py  task_targets_router.py  tasks_router.py
src/backend/api/services/: dependancies.py  http_schemas.py
src/backend/app/: main.py  pytest.ini  run.bat
src/backend/app/services/: async_speedtest.py  mail.py  quota_checker.py  wait.py
src/backend/app/tasks/: quota_tasks.py  speedtest_tasks.py  task_runner.py
src/backend/app/templates/: result.html
src/backend/core/: config.py
src/backend/db/: database.py  models.py  setup_database.py
src/backend/use_cases/: jobs_router.py  lines.py  task_results_router.py  task_statuses_router.py  task_targets_router.py  tasks_router.py
src/cli/: commands.py
src/core/: config.py  database_init.py  logging_config.py  scraper_config.py
src/db/: crud.py  database.py  schema.py  setup_database.py
src/db/models/: quota_result_model.py
src/execution_v1/: GITHUB_RELEASE.md  README.md  RELEASE.md  main.py  net_ninja  orange.py  output.txt  plan copy.md  plan.md  project.md  pyproject.toml  requirements.txt
src/execution_v1/.claude/: settings.local.json
src/execution_v1/app/: async_speedtest.py  logger.py  mail copy.py  mail.py  wait.py
src/execution_v1/app/quota_checker/: orange.py  we.py
src/execution_v1/cli/: parser.py
src/execution_v1/core/: config.py  encryption.py  executor.py  scraper_config.py
src/execution_v1/db/: crud.py  database.py  model.py  schema.py  validators.py
src/execution_v1/db/models/: email_model.py  isp_model.py  line_model.py  log_model.py  quota_result_model.py  speed_test_result_model.py
src/execution_v1/reports/: report_20251020_130257.html  report_20251020_151934.html  report_20251020_154954.html
src/execution_v1/services/: line_service.py  notification_service.py  quota_service.py  report_service.py  speedtest_service.py
src/execution_v1/templates/: result.html
src/reports/: report_20251020_152129.html  report_20251021_122154.html  report_20251021_123149.html
src/services/: line_service.py  notification_service.py  quota_service.py  speedtest_service.py
