[project]
name = "execution-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "aiomysql>=0.2.0",
    "aiosmtplib>=4.0.2",
    "aiosqlite>=0.21.0",
    "icecream>=2.1.8",
    "jinja2>=3.1.6",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyinstaller>=6.16.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "selenium>=4.37.0",
    "selenium-async>=0.1.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]
